[metadata]
name = dashboard
summary = Test Result Collector
description-file =
    README.rst
author = SerenaFeng
author-email = feng.xiaowei@zte.com.cn
#home-page = http://www.opnfv.org/
classifier =
    Environment :: opnfv
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7

[global]
setup-hooks =
    pbr.hooks.setup_hook

[files]
packages =
    dashboard
data_files =
    /etc/dashboard =
        etc/config.ini
        dashboard/functest/testcases.yaml

[entry_points]
dashboard.mongo2elastic.format =
    file = dashboard.functest.format

console_scripts =
    functest_m2e = dashboard.mongo2elastic.main:main
    functest_e2k = dashboard.elastic2kibana.main:main

[egg_info]
tag_build =
tag_date = 0
tag_svn_revision = 0

