[metadata]
name = opnfv_testapi
summary = Test Result Collector
description-file = 
    README.rst
author = SerenaFeng
author-email = feng.xiaowei@zte.com.cn
#home-page = http://www.opnfv.org/
classifier =
    Environment :: opnfv
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7

[global]
setup-hooks =
    pbr.hooks.setup_hook

[files]
packages =
    opnfv_testapi

data_files =
    /etc/opnfv_testapi = etc/config.ini
    /usr/local/share/opnfv_testapi = 3rd_party/static/*

[entry_points]
console_scripts =
    opnfv-testapi = opnfv_testapi.cmd.server:main

[egg_info]
tag_build =
tag_date = 0
tag_svn_revision = 0
