[metadata]
name = reporting

author = JackChan
author-email = chenjiankun1@huawei.com

classifier =
    Environment :: opnfv
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7

[global]
setup-hooks =
    pbr.hooks.setup_hook

[files]
packages =
    api

[entry_points]
console_scripts =
    api = api.server:main

[egg_info]
tag_build =
tag_date = 0
tag_svn_revision = 0
